--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
+    <audio controls autoplay loop hidden>
+        <source src="music/stage1.m4a" type="audio/mpeg">
+        <p>If you can read this, your browser does not support the audio element.</p>
+    </audio>
     <title >chrome easter egg: t-rex runner</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
